# Fitatu_OCR

./: .gitignore  pyproject.toml  requirements.txt
src/fitatu_ocr/: README.md
src/fitatu_ocr/schemas/: nutrition.py  ocr_token.py
tests/: test_models.py
